# CienciaDados

./: dados_exportados.csv  funcoes.py
Python/: basico.py  classes.py
Python/1_basico_python/: basico.py  exp_reg.py  funcoes.py  man_arq.py
Python/1_basico_python/ambientes/: comandos
Python/1_basico_python/ambientes/teste_poetry/: pyproject.toml
Python/2_libs_python/: 2_Overview Pandas.ipynb  Analise Bivariada com Python.ipynb  Analise Univariada com Python.ipynb  NumPy.py  Pandas.py  SciPy.py  data.csv
Python/3_Analise_dados/: Exercicio - Analise Univariada com Python.ipynb  Exercicio Analise Bivariada com Python.ipynb  Exercicio Resolvido - Analise Univariada com Python.ipynb  main.py
Python/5_data_science/arvores_de_decisao/1_Arvores_Decisao_Classificacao_v3/: 1_Arvores_Decisao_Classificacao.ipynb
Python/5_data_science/arvores_de_decisao/5_Arvores_Decisao_Generalizacao/: base_funcionarios.csv
Python/5_data_science/diagnosico_modelo/: KS_Demo.ipynb  Metricas_Classificacao_Diabetes_Resolvido.ipynb
Python/5_data_science/diagnosico_modelo/1_Interpretabilidade/: 1_Interpretabilidade.ipynb  preditiva.py
Python/5_data_science/outliers/: AnomalyDetection_HandsOn_Resolvido.ipynb
Python/5_data_science/regressao_linear/: reg_linear_multipla.py
Python/5_data_science/regressao_logistica/: 1_Regressao_Logistica_Demo.ipynb
Python/5_data_science/turing_hiperparametro/: 2_AmostrasDesbalanceadas_CC_Resolvido.ipynb
Python/arquivos/: escrita.csv  json.json  tabela.csv  texto.txt
projetos/: .gitignore  data_insertion.py  export_data.py  queries.sql  tables.sql
(+20 files in other folders)
