[project]
name = "teste-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo-Brezolin-Buquera",email = "rodrigobbuquera@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "teste_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
